# QTouch

./: .gitignore  CMakeLists.txt  astylerc
cmake/Modules/: Melpers.cmake
db/: QTouchDb.sql  QTouchDb_v0.2.sql  QTouchDb_v0.4.sql
resources/: resources.qrc
resources/images/: clock.svgz  elapsedtimemeter.svgz  meter.svgz
src/: CMakeLists.txt  TODO  coursemodel.cpp  coursemodel.hpp  datamodel.cpp  datamodel.hpp  datamodel_test.cpp  document.cpp  document.hpp  homescreencontroller.cpp  homescreencontroller.hpp  lessonmodel.cpp  lessonmodel.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  profilemodel.cpp  profilemodel.hpp  recorder.cpp  recorder.hpp
src/db/: CMakeLists.txt  db.cpp  db.hpp  db_const.hpp  db_help.hpp  db_test.cpp  dbexception.hpp  dbhelper.cpp  dbhelper.hpp  dbhelper_test.cpp  dbinterface.hpp  dbv1.cpp  dbv1.hpp  dbv1_test.cpp
src/entities/: CMakeLists.txt  course.cpp  course.hpp  course_test.cpp  profile.cpp  profile.hpp  stats.cpp  stats.hpp  typo.cpp  typo.hpp  typo_test.cpp
src/gui/: CMakeLists.txt  qml.qrc  qml_test.cpp  svgelementprovider.cpp  svgelementprovider.hpp  textpage.cpp  textpage.hpp  textview.cpp  textview.hpp  trainingwidget.cpp  trainingwidget.hpp
src/gui/qml/: CourseSelector.qml  HomeScreen.qml  LessonSelector.qml  MainWindow.qml  ProfileScreen.qml  StatsChart.js  StatsChart.qml  StatsView.qml  TrainingScreen.qml
src/gui/qml/items/: AnalogStopWatch.qml  Clock.qml  ElapsedTimeWidget.qml  InflatedLabel.qml  ListItem.qml  Meter.qml  PauseDialog.qml  RateWidget.qml  ToolTip.js  ToolTip.qml  tst_ListItem.qml
src/tools/: CMakeLists.txt  uuidcorrector.cpp
src/utils/: CMakeLists.txt  course.cpp  course.cpp.orig  course.hpp  course.hpp.orig  course_test.cpp  course_test.cpp.orig  exceptions.hpp  profile.cpp  profile.hpp  profile_test.cpp  sharedthis.hpp  typo.cpp  typo.hpp  typo_test.cpp  utils.hpp  utils_test.cpp
src/wrapper/: CMakeLists.txt  qmlcourse.cpp  qmlcourse.hpp  qmlprofile.cpp  qmlprofile.hpp
src/xml/: CMakeLists.txt  parser.cpp  parser.hpp  parser_test.cpp  writer.cpp  writer.hpp  writer_test.cpp
